--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.2",
     "eslint": "^9.31.0",
     "eslint-plugin-vue": "~10.3.0",
     "happy-dom": "^18.0.1",
