--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vavt/v3-extension": "^4.0.0",
     "axios": "^1.12.2",
     "marked": "^16.3.0",
+    "md-editor-v3": "^6.0.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
